--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@types/leaflet": "1.9.8",
     "axios": "1.6.7",
     "leaflet": "1.9.4",
+    "lucide-react": "^0.507.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-leaflet": "4.2.1",
