--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,3 +19,7 @@ pytest>=8.0.1
 httpx>=0.26.0
 email-validator>=2.0.0 
 prometheus-fastapi-instrumentator==7.1.0
+opentelemetry-api
+opentelemetry-sdk 
+opentelemetry-exporter-otlp
+opentelemetry-instrumentation-fastapi
