--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,6 +82,20 @@ services:
       - ./promtail-config.yml:/etc/promtail/config.yml
     command: -config.file=/etc/promtail/config.yml
 
+  tempo:
+    image: grafana/tempo:latest
+    container_name: tempo
+    ports:
+      - "14268:14268"  # Jaeger endpoint
+      - "3200:3200"    # Tempo query endpoint
+      - "4317:4317"    # OpenTelemetry gRPC endpoint
+      - "4318:4318"    # OpenTelemetry HTTP endpoint
+    volumes:
+      - ./tempo-data:/var/lib/tempo
+      - ./tempo-config.yaml:/etc/tempo/tempo-config.yaml
+    command: -config.file=/etc/tempo/tempo-config.yaml
+    restart: always
+
 volumes:
   postgres_data:
   grafana_data:
