--- a/loki-config.yml
+++ b/loki-config.yml
@@ -31,6 +31,7 @@ storage_config:
     directory: /tmp/loki/chunks
 
 limits_config:
+  volume_enable: true
   enforce_metric_name: false
   reject_old_samples: true
   reject_old_samples_max_age: 168h
